fix image overflow

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -30,14 +30,16 @@ body {
 div.card.teal.lighten-5:hover {
   box-shadow: 2px 2px rgba(216, 212, 212, 0.603);
 }
-
+div#student-photo{
+  display:flow-root;
+}
 img.responsive-img.card-panel {
   max-width:30%;
   padding:0;
   float:right;
-  overflow: hidden;
+  overflow: auto;
   height:auto;
-  max-height: 70%;
+  max-height: 100%;
 }
 
 div.card-panel.teal-text.center-align {
@@ -47,6 +49,5 @@ div.card-panel.teal-text.center-align {
   font-size: 90%;
   overflow: auto;
   max-height: 70%;
-
 }
 
